# byocli

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
.github/workflows/: ci.yml
docs/: CI_GUIDE.md  MACOS_CROSS_PLATFORM_HANDOFF.md
docs/architecture/: byocli-project-map.drawio
scripts/: byocli-tauri.mjs  migrate-colors-pass2.py  migrate-colors.py  stop-byocli-dev.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-annotation.json  default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: browser.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: local_file_server.rs
src/components/: AutomationsView.tsx  BrowserPane.tsx  ConfirmDialog.tsx  FileTreePane.test.ts  FileTreePane.tsx  IconButton.tsx  SearchDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  TerminalPane.tsx
src/lib/: automations.test.ts  automations.ts  defaults.test.ts  defaults.ts  platform.ts  theme.ts  uuid.test.ts  uuid.ts
src/test/: setup.ts
